# mkapidocs

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION_ENHANCEMENT_SUMMARY.txt  CITATION_REPORTS_INDEX.md  CITATION_VERIFICATION_REPORT.md  CLAUDE.md  ENHANCED_CITATIONS_BY_PATTERN.md  IMPROVEMENTS_COMPLETE.md  README.md  README_IMPROVEMENTS.md  TEMPLATE_CHANGES_SUMMARY.md  TEMPLATE_IMPROVEMENTS.md  VALIDATION_PLAN.md  VALIDATION_REPORT.md  mkapidocs  mkapidocs.py  mkdocs.yml  pyproject.toml  python-docs-init  python-project-documentation-framework.md
.claude/plans/: phase1-implementation-plan.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml  pages.yml  pypi-publish.yml  release.yml  test.yml
.gitlab/scripts/: create_release.py  generate_release_notes.py  gitlab_ci_utilities.py  python-ci-setup.sh
.gitlab/workflows/: defaults.gitlab-ci.yml  pages.gitlab-ci.yml  pytest.gitlab-ci.yml  python-static-analysis.gitlab-ci.yml  release.gitlab-ci.yml
.planning/: BACKLOG.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: gen_ref_pages.py  index.md  install.md
docs/reference/: python.md
scripts/: build-binaries.py  hatch_build.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/reference/python/: index.html
site/search/: search_index.json
tests/: README.md  conftest.py  test_auto_install.py  test_build_serve.py  test_cli_commands.py  test_cli_utils.py  test_feature_detection.py  test_gitlab_ci_generation.py  test_gitlab_ci_update.py  test_pyproject_functions.py  test_template_rendering.py  test_validation_system.py  test_workflow_conflict.py
typings/ruamel/: __init__.pyi
typings/ruamel/yaml/: __init__.pyi
typings/tomlkit/: __init__.pyi  exceptions.pyi
