[project]
name = "python-docs-init"
version = "0.1.0"
description = "Automated documentation setup tool for Python projects using MkDocs and GitHub Pages. A PEP 723 standalone script that intelligently detects project features (C/C++ code, Typer CLI, private registries) and generates comprehensive MkDocs documentation with Material theme, API references, GitHub Actions workflow, and docstring linting configuration."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Jamie Nelson", email = "jamie.nelson@assaabloy.com" },
]
license = { text = "Unlicense" }

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
preview = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint]
extend-select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "C90",
    "PGH",
    "RUF",
    "TRY",
    "DOC",
    "D",
]
ignore = [
    "COM812",
    "COM819",
    "D107",
    "D415",
    "E111",
    "E117",
    "E203",
    "E402",
    "E501",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "TRY003",
    "DOC501",
    "T201",  # Allow print statements - not all print() is debug code
]
unfixable = [
    "F401",
    "DOC501",
]
select = [
    "DOC",
    "D",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
force-single-line = false
force-wrap-aliases = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",
    "S603",
    "S607",
    "D102",
    "D200",
    "D100",
]
"**/test_*.py" = [
    "S101",
    "S603",
    "S607",
    "D102",
    "D200",
    "D100",
]

[tool.mypy]
python_version = "3.11"
strict = true
extra_checks = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
disable_error_code = "call-arg,arg-type"
mypy_path = []

[tool.basedpyright]
pythonVersion = "3.11"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "-v",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "basedpyright>=1.21.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.2",
    "types-pyyaml>=6.0",
    "python-semantic-release>=9.0.0",
    # Script dependencies (for testing mkapidocs script)
    "typer>=0.19.2",
    "jinja2>=3.1.6",
    "tomli-w>=1.2.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.2",
    "rich>=13.9.4",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
build_command = "uv build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true
