[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkapidocs"
version = "0.1.1"
description = "Automated documentation setup tool for Python projects using MkDocs with GitHub Pages or GitLab Pages. Intelligently detects project features (C/C++ code, Typer CLI, private registries) and generates comprehensive MkDocs documentation with Material theme, API references, CI/CD workflows, and docstring linting configuration."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Jamie Nelson", email = "jamie.nelson@assaabloy.com" }]
dependencies = [
    "typer>=0.19.2",
    "jinja2>=3.1.6",
    "tomlkit>=0.12.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.2",
    "httpx>=0.28.1",
    "ruamel.yaml>=0.18.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",

    "mkdocs-literate-nav>=0.6.1",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-typer2>=0.1.0",
    "mkdoxy>=1.2.3",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "termynal>=0.12.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "basedpyright>=1.21.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.2",
    "python-semantic-release>=9.0.0",
    "pep723-loader>=0.6.0",
    "hatchling>=1.28.0",
]

[project.license]
text = "Unlicense"

[project.scripts]
mkapidocs = "mkapidocs.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["packages/mkapidocs"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
unsafe-fixes = true
preview = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint]
extend-select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "C90",
    "PGH",
    "RUF",
    "TRY",
    "D",
]
ignore = [
    "COM812",
    "COM819",
    "D107",
    "D415",
    "DOC501",
    "E111",
    "E117",
    "E203",
    "E402",
    "E501",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "S202",
    "S404",
    "S506",
    "S603",
    "T201",
    "TRY003",
    "S404",   # subprocess module import is needed for system integration
    "S603",   # subprocess calls are to known executables (git, uv, mkdocs)
    "S701",   # Jinja2 autoescape not needed for YAML/Markdown generation
    "S202",   # tarfile.extractall is used with trusted Doxygen releases
    "DOC502", # docstring raise clauses may reference potential raises from callees
]
unfixable = ["F401", "DOC501"]
select = ["DOC", "D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
force-single-line = false
force-wrap-aliases = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S603", "S607", "D102", "D200", "D100"]
"**/test_*.py" = ["S101", "S603", "S607", "D102", "D200", "D100"]
# Generated documentation script - minimal typing, not production code


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
disable_error_code = "call-arg,arg-type"
mypy_path = []

[tool.basedpyright]
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnusedParameter = false
reportAny = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
include = [".", "tests"]
extraPaths = ["tests", "."]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".*",
    "__*",
    "**/typings",
    "demo",
]
ignore = ["**/typings"]
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
addopts = ["--cov=packages/mkapidocs", "--cov-report=term-missing", "-v"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["tests/*", ".venv/*", "run-pytest.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "docs",
    "style",
    "refactor",
    "perf",
    "test",
    "build",
    "ci",
    "chore",
    "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true
